# thewave-backend

./: .env.asc  .gitignore  docker-compose.yml  docker-compose.yml.oci  encrypt-env-files.sh
ml/: .gitignore  README.md  get_current_conditions.py  get_current_conditions.sh  pyproject.toml  report.md
ml/configs/: data.yaml  features.yaml  train.yaml
ml/data/: hourly.csv
ml/data/interim/: cleaned.parquet  weather_archive.parquet  weather_joined.parquet
ml/data/raw/: raw_data.csv
ml/models/: gru.pt  huber_linear.joblib  lightgbm.joblib  lightgbm_best_params.json  state.json
ml/models/best/: metadata.json
ml/reports/metrics/: all_models.json  gru.json
ml/scripts/: build_features.py  fetch_archive.py  make_report.py  promote_gru.py  retrain_lightgbm.py  run_forecast.sh  run_retrain.sh  wfcv_select.py
ml/src/lake_forecast/: __init__.py  cli.py  config.py  eval.py  infer.py  retrain.py  splits.py  train.py
ml/tests/: test_clean.py  test_eval.py  test_features.py  test_infer.py  test_openmeteo_cache.py  test_splits.py
notifications/: .dockerignore  .gitignore  Dockerfile  FCM_TOKEN_API.md  PLAN.md  README.md  docker-entrypoint.sh  pyproject.toml  response.json
notifications/config/: config.yaml.example
notifications/scripts/: cleanup_notifications_without_tokens.py  clear_notified_thresholds.py  delete_client_notifications.py  migrate_to_sqlite.py  pretty_print_notifications.py
notifications/src/: __init__.py
notifications/src/api/: app.py  auth.py  models.py  routes.py
notifications/src/daemon/: __init__.py  checker.py  notifier.py  scheduler.py
notifications/src/storage/: dynamodb.py  sqlite.py
notifications/src/utils/: calendar.py  config.py  fcm.py
price-scraper/: .gitignore  README.md  pyproject.toml
price-scraper/price_scraper/: __init__.py  __main__.py  collector.py  scraper.py  storage.py
price-scraper/tests/: test_collector.py  test_storage.py
upstream-api/: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  config.yaml.example  history.py  latest.csv  main.py  modify_availability.py  pyproject.toml  response.json  wave_calendar.py
upstream-api/.claude/: settings.local.json
upstream-api/config/: config.yaml.example
upstream-api/data/: a.wasm  latest.csv  prices.db  response-copy.json  response.json  water_temperature.db  water_temperature.db-shm
upstream-api/scripts/: dump_temperature_db.py  modify_availability.py
upstream-api/src/: __init__.py
upstream-api/src/core/: auth.py  client_tracker.py  history.py  performance_floodlights.py  performance_price.py  performance_temperature.py  proxy_health.py  scheduler.py  upstream_auth.py  water_temp_db.py  wave_calendar.py  weather.py  weather_forecast.py
upstream-api/src/utils/: EMULATOR_README.md  (+3 more)
(+535 files in other folders)
