[project]
name = "notifications"
version = "0.1.0"
description = "Notifications system backend for waveform mobile app"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "schedule>=1.2.0",
    "firebase-admin>=6.4.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

